[package]
name = "jupite-logic"
version = "0.1.0"
authors = ["x <x@weei.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0"
diesel = {version="1.4.2" , features=["mysql","r2d2"]}
env_logger = "0.6"
serde = "1.0"
serde_derive = "1.0.101"
r2d2 = "0.8.5"
toml = "0.5"


